# volva

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/volva-adapters/: Cargo.toml
crates/volva-adapters/src/: lib.rs
crates/volva-api/: Cargo.toml
crates/volva-api/src/: lib.rs
crates/volva-auth/: Cargo.toml
crates/volva-auth/src/: api_key_resolver.rs  lib.rs  status.rs  storage.rs  types.rs
crates/volva-auth/src/anthropic/: account.rs  callback_server.rs  mod.rs  oauth.rs  pkce.rs
crates/volva-bridge/: Cargo.toml
crates/volva-bridge/src/: lib.rs
crates/volva-cli/: Cargo.toml
crates/volva-cli/src/: auth.rs  backend.rs  chat.rs  main.rs  run.rs  session.rs
crates/volva-compat/: Cargo.toml
crates/volva-compat/src/: lib.rs
crates/volva-config/: Cargo.toml
crates/volva-config/src/: lib.rs
crates/volva-core/: Cargo.toml
crates/volva-core/src/: checkpoint.rs  lib.rs
crates/volva-runtime/: Cargo.toml
crates/volva-runtime/src/: checkpoint_sqlite.rs  context.rs  execenv.rs  hash_edit.rs  hooks.rs  lib.rs
crates/volva-runtime/src/backend/: api.rs  mod.rs  official_cli.rs
crates/volva-tools/: Cargo.toml
crates/volva-tools/src/: lib.rs
docs/: ECOSYSTEM-BOUNDARY-AUDIT.md  HOOK-ADAPTER-CORTINA.md  IMPLEMENTATION-PLAN-OFFICIAL-BACKEND.md  README.md  VOLVA-ARCHITECTURE.md  architecture.md  hook-adapter-cortina.md  official-backend-plan.md  workspace-session-binding.md
docs/plans/: README.md
