[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.5"
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spore = { git = "https://github.com/basidiocarp/spore", rev = "0bc2e878010e75e30e26fa517d747e97d59628b0", features = ["otel"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
