[package]
name = "volva-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
spore.workspace = true
tokio = { version = "1", features = ["time"] }
tracing.workspace = true
uuid.workspace = true
volva-core = { path = "../volva-core" }

[lints]
workspace = true
