[package]
name = "volva-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
base64 = "0.22"
dirs.workspace = true
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
spore.workspace = true
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true
url = "2"
uuid.workspace = true
volva-core = { path = "../volva-core" }

[lints]
workspace = true
