[package]
name = "volva-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "volva"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
spore.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
volva-api = { path = "../volva-api" }
volva-auth = { path = "../volva-auth" }
volva-compat = { path = "../volva-compat" }
volva-config = { path = "../volva-config" }
volva-core = { path = "../volva-core" }
volva-runtime = { path = "../volva-runtime" }

[lints]
workspace = true
