[package]
name = "volva-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
spore.workspace = true
tracing.workspace = true
volva-adapters = { path = "../volva-adapters" }
volva-auth = { path = "../volva-auth" }
volva-bridge = { path = "../volva-bridge" }
volva-config = { path = "../volva-config" }
volva-core = { path = "../volva-core" }
volva-tools = { path = "../volva-tools" }

[lints]
workspace = true
