[package]
name = "volva-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite = { version = "0.39", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
spore.workspace = true
tracing.workspace = true
tempfile = "3"
thiserror = "2"
twox-hash = "1"
volva-adapters = { path = "../volva-adapters" }
volva-auth = { path = "../volva-auth" }
volva-bridge = { path = "../volva-bridge" }
volva-config = { path = "../volva-config" }
volva-core = { path = "../volva-core" }
volva-tools = { path = "../volva-tools" }

[lints]
workspace = true
